--- a/freestyle.html
+++ b/freestyle.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
@@ -76,7 +79,8 @@
       <a class="language" href="./English/freestyle.html"><div class="language">English</div></a>
     </nav>
   </header>
-  <main>
+  <main class="main">
+    <!--
     <div class="video-background-holder">
       <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
         <source src="Fotos/Promo_Website.mp4" type="video/mp4" class="freestylepromo">
@@ -110,6 +114,34 @@
         <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
             alt="Responsive image"></div>
       </div>
+    </div> -->
+    
+    <div class="row portfoliofreestyle">
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9" class="mystory">
+          <iframe src="https://www.youtube.com/embed/PxjYtmQ5OMk?si=10pIXkWEDC26WqV7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <h4 class="titlemystory">Freestyle Voetbal Showreel</h4>
+        <div class="omschrijving">Sinds meer dan 6 jaar beoefent Tim Bonnarens freestyle voetbal en behoort hij bij de beste van België.</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <h4 class="freestyletitle">Info over freestyle</h4>
+              <p class="omschrijving">Ik was van kinds af aan al gepassioneerd door jongleren en skills met de bal. In 2016 ben ik begonnen
+                met enkele simpele, indrukwekkende trucs te leren. Sindsdien ben ik continu bezig met mijn freestyle
+                naar een hoger niveau te brengen en doe ik geregeld mee aan competities. Nu ben ik beschikbaar voor
+                privétrainingen, optredens, rollen in muziekclips, reclameclips, sponsoring, ... </p>
+        <h4 class="freestyletitle">Rewards</h4>
+        <p class="omschrijving">- Winnaar Play like Pélé Belgium by Snickers, Meet and Greet met beste voetballer aller tijden</p>
+        <p class="omschrijving">- Winnaar Belgium Online Lower Competition 2020</p>
+        <p class="omschrijving">- Daarnaast ook top 16, top 8 en top 6 in verschillende Belgische competities</p>
+         <!--
+         <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
+           alt="Responsive image"></div>
+         </div>
+         -->
+         <p class="quote">Freestyle football is een unieke combinatie waar sport en kunst elkaar ontmoeten.</p>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
     </div>
   </main>
   <script src="./JS/app.js"></script>
