--- a/overmij.html
+++ b/overmij.html
@@ -122,7 +122,7 @@
           slag te gaan als graphic designer.</p>
         <p class="animated fadeInUp">Aan het einde van het tweede heb ik besloten om audio, video, 2D- en 3D-animatie te studeren aan Artevelde in de richting Audiovisual
           Design, ook
-          een afstudeerrichting in de Grafische en Digitale Media. Hierin studeer ik af in 2023.</p>
+          een afstudeerrichting in de Grafische en Digitale Media. Hierin studeerde ik af in 2023.</p>
         <p class="animated fadeInUp">In mijn vrije tijd ben ik ook erg gepassioneerd voor sport en natuur, dus ook voor
           sport- en natuurfotografie ben ik te vinden. Naast fotograferen kan ik erg goed werken in Photoshop en
           optimaliseer ik graag foto's naar uw wensen. Naast ontwerpen kan ik ook eenvoudige, statische websites
