--- a/Audiovisuals/2D.html
+++ b/Audiovisuals/2D.html
@@ -87,20 +87,18 @@
 </header>
 <main class="main">
     <div class="row portfolio">
-      <div class="col-12 col-md-6">
-        <video controls>
-          <source src="../Video/Cupido.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/CPYEg2yilOI?si=JAOnR-dgkPNTeH-l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <p>Cupido</p>
         <div class="omschrijving">In deze video heb ik een verhaal uitgewerkt rond cupido in After Effects.</div>
         <div class="credits">Muziek: Pixabay - Zakhar Valaha - Cinematic Melody</div>
       </div>
-      <div class="col-12 col-md-6">
-          <video controls>
-              <source src="../Video/Stopmotion.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/Ah5JEkRlfbs?si=OQGwqTyMMZAmKmG7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <p>Fruitsalade</p>
         <div class="omschrijving">In deze video heb ik een verhaal rond fruit uitgewerkt.</div>
         <div class="credits">Sound Effects: Zapsplat & Freesound</div>
