--- a/Audiovisuals/3D.html
+++ b/Audiovisuals/3D.html
@@ -87,20 +87,18 @@
 </header>
 <main class="main">
     <div class="row portfolio">
-      <div class="col-12 col-md-6">
-          <video controls>
-              <source src="../Video/TheChase.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/FKTVU4uqzyQ?si=tI0j0X2ZzQeb7NFF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <p>Car-chase</p>
         <div class="omschrijving">In deze video heb ik een scène gecreëerd waarbij een politiewagen een wagen achtervolgt.</div>
         <div class="credits">Sounds: Zapsplat & freesound.</div>
         </div>
-        <div class="col-12 col-md-6">
-          <video controls>
-              <source src="../Video/Heli.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+        <div class="col-12 col-md-6 portfoliodiv">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/qCdxvrp8H4k?si=gyFORAFeKd-SaPxU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
         <p>Tag presentation</p>
         <div class="omschrijving">In this video heb ik een scène gecreëerd waarin de studierichting Audiovisual Design geïntroduceerd wordt.</div>
         <div class="credits">Sounds: Freesound</div>
