--- a/Audiovisuals/video.html
+++ b/Audiovisuals/video.html
@@ -87,21 +87,19 @@
 </header>
 <main class="main">
   <div class="row portfolio">
-    <div class="col-12 col-md-6">
-      <video controls>
-        <source src="../Video/TimBonnarens_ProductCommercial_02.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/Pa_dkJxhZq8?si=gaWCPbJDdkovw1Ep" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
       <p>Product Commercial</p>
       <div class="omschrijving">Tijdens mijn thesis voor de Arteveldehogeschool, heb ik mezelf gespecialiseerd in product shots.</div>
       <div class="credits">Music: Commercial Uplifting Corporate - Ivymusic - Pixabay</div>
       <div class="credits">Achtergrond: Tommyvideo - Pixabay</div>
     </div>
-    <div class="col-12 col-md-6">
-        <video controls>
-            <source src="../Video/KorteVersie_Voorstel2_MaandVDMarkt_Definitief.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+    <div class="col-12 col-md-6 portfoliodiv">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/lg46XBk1f-Q?si=2sTzi-5N3ZzA3J-K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
       <p>Maand Van De Markt</p>
       <div class="omschrijving">Deze video is gemaakt voor provincie Antwerpen om de Maand van de Markt te promoten.</div>
       <div class="credits">Klankopname: Leonie Van Herbruggen.</div>
@@ -109,11 +107,10 @@
       <div class="credits">Photo Design: Cédric Van Damme.</div>
       <div class="credits">Music: Happy Acoustic Guitar Background Music - Music Unlimited</div>
     </div>
-  <div class="col-12 col-md-6">
-    <video controls>
-        <source src="../Video/MartijnDebbaut.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+  <div class="col-12 col-md-6 portfoliodiv">
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/7oRlhWWzKfA?si=dTyJWS3oIU8ZX3wQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
   <p>Reportage</p>
   <div class="omschrijving">Deze video toont een reportage over freestyle voetballer <a href="https://www.instagram.com/martijn_debbaut/" target="_blank">Martijn Debbaut</a>.</div>
   <div class="credits">Music: Marway - 008 FREESTYLE (Volume 3) - Pixabay</div>
