--- a/English/aboutme.html
+++ b/English/aboutme.html
@@ -109,7 +109,7 @@
           University, versatile field of study in the Graphic and Digital Media
           whereby I learned contemporary techniques to work as a graphic designer.</p>
         <p class="animated fadeInUp">At the end of the second year I decided to study audio, video, 2D and 3D animation at Artevelde in the field of study Audiovisual Design,
-          also in the Graphic and Digital Media. I'm graduating at the end of the school year of 2023.</p>
+          also in the Graphic and Digital Media. I graduated at the end of the school year of 2023.</p>
         <p class="animated fadeInUp">In my spare time, I'm also passionated for sport and nature, so you can also see me photographing sport and nature now and then. 
           Beside photographing, I can also work really well in Photoshop and I love to optimize your photos according to your wishes.
           Beside designing, I can also write simple, static websites in HTML and CSS (like this one). This are languages wherin I can write a basic website and bring it online.</p>
