--- a/English/index.html
+++ b/English/index.html
@@ -86,10 +86,9 @@
     <div class="col showreelTim">
       <div class="row portfolio">
         <div class="col-12 col-md-6">
-          <video controls>
-            <source src="../Video/FinalVideoShowreel.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/ZlqjnuHTeo8?si=4bjyPP5pUQgFx0CO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <div class="embed-responsive embed-responsive-16by9">
           <p>Video Showreel</p>
           <!-- <div class="omschrijving">As an allround video designer, Tim Bonnarens provides video, audio and animation.</div> -->
           <div class="credits">Song 1: Audio Library Plus - IVAAVI - Too Sweet</div>
@@ -97,10 +96,9 @@
           <div class="credits">Sound Effects: freesound.org, zapsplat en zelf opgenomen</div>
         </div>
         <div class="col-12 col-md-6">
-            <video controls>
-                <source src="../Video/FinalShowreel_AEWithFade.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe src="https://www.youtube.com/embed/lMbWDBBoz4I?si=flJiN0OmhRzckI-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
           <p>Photoshop Showreel</p>
           <!-- <div class="omschrijving">As a graphic designer, Tim Bonnarens provides 2D-graphics, photography and image retouching.</div> -->
           <div class="credits">Song: Pixabay - Alex Grohl - Far Away</div>
@@ -108,7 +106,7 @@
       </div>
   </div>
 
-  <br><br><br>
+  <br><br>
   
   <div class="whatIdo"><h4 class="topmarge animated fadeInLeft">Portfolio</h4></div>
   <article class="portfoliobox">
@@ -148,41 +146,45 @@
     </div>
   </article>
 
-  <br><br><br>
-
   <div class="row portfolio d-flex align-items-end">
     <div class="card col-12" style="width: 18rem;">
       <h5 class="producties col-12">Already collabed with</h5>
     </div>
     <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_Artevelde.png" alt="Card image cap">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Artevelde.png" alt="Card image cap">
     </div>
     <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_ProvA.png" alt="Card image cap">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Videofy.png" alt="Card image cap">
     </div>
-    <div class="card col-6 col-sm-4 col-lg-1" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_ProvWVL.png" alt="Card image cap">
+    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/MEET-HET.jpg" alt="Card image cap">
     </div>
-    <div class="card col-6 col-sm-4 col-lg-1" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_OVL.png" alt="Card image cap">
+    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvA.png" alt="Card image cap">
     </div>
-    <div class="card col-9 col-sm-4 col-lg-1" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_Limburg.png" alt="Card image cap">
+    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvWVL.png" alt="Card image cap">
+    </div>
+    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_OVL.png" alt="Card image cap">
+    </div>
+    <div class="card col-9 col-sm-4 col-lg-2" style="width: 18rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Limburg.png" alt="Card image cap">
     </div>
     <div class="card col-3 col-sm-2 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_VLB_v2.png" alt="Card image cap">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_VLB_v2.png" alt="Card image cap">
     </div>
-    <div class="card col-8 col-sm-6 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_JerkBeefy.png" alt="Card image cap">
+    <div class="card col-8 col-sm-6 col-lg-2" style="width: 9rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_JerkBeefy.png" alt="Card image cap">
     </div>
     <div class="card col-4 col-sm-4 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_Envelbag.png" alt="Card image cap">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Envelbag.png" alt="Card image cap">
     </div>
-    <div class="card col-6 col-sm-6 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_Snickers.png" alt="Card image cap">
+    <div class="card col-6 col-sm-4 col-lg-2" style="width: 9rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Snickers.png" alt="Card image cap">
     </div>
-    <div class="card col-6 col-sm-6 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie" src="../Fotos/Logo's/Logo_DaknamseBossen.png" alt="Card image cap">
+    <div class="card col-6 col-sm-4 col-lg-1" style="width: 9rem;">
+      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_DaknamseBossen.png" alt="Card image cap">
     </div>
   </div>
   </main>
@@ -190,7 +192,7 @@
     <div class="row">
       <div class="col-12 col-sm-4 footertext">On this site you can find my portfolio!
       </div>
-      <div class="col-12 col-sm-4 footertext">Available for work as student-freelancer!</div>
+      <div class="col-12 col-sm-4 footertext">Available for work as freelancer!</div>
       <div class="col-12 col-sm-4 footertext">This website is made by Tim Bonnarens.</div>
     </div>
   </footer>
