--- a/English/freestyle.html
+++ b/English/freestyle.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
@@ -75,15 +78,16 @@
       <a class="language" href="../freestyle.html"><div class="language">Dutch</div></a>
     </nav>
   </header>
-  <main>
+  <main class="main">
+    <!--
     <div class="video-background-holder">
       <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="../Fotos/Promo_Website_English.mp4" type="video/mp4" class="freestylepromo">
+        <source src="Fotos/Promo_Website.mp4" type="video/mp4" class="freestylepromo">
       </video>
       <div class="video-background-content d-flex h-100 text-center align-items-end">
         <div class="w-100 text-white">
-          <div class="freestyle_meerinfo">More info</div>
-          <a href="#freestyle_content"><img src="../Fotos/Pijl.png" class="img-fluid" alt="Responsive image"></a>
+          <div class="freestyle_meerinfo">Meer info</div>
+          <a href="#freestyle_content"><img src="Fotos/Pijl.png" class="img-fluid" alt="Responsive image"></a>
         </div>
       </div>
     </div>
@@ -92,23 +96,48 @@
         <div class="col-12 col-md-9">
           <div class="row">
             <div class="col-12 col-sm-6">
-              <h4>Info about freestyle</h4>
-              <p>I was passionated for juggling and skills with a ball since I was a child. In 2016, I started learning some simple, impressive tricks. 
-                Since then I have been continuously bringing my freestyle
-                to a higher level and I regularly participate in competitions. Now I'm available for
-                private training, performances, roles in music clips, advertising clips, sponsorships, ... </p>
+              <h4>Info over freestyle</h4>
+              <p>Ik was van kinds af aan al gepassioneerd door jongleren en skills met de bal. In 2016 ben ik begonnen
+                met enkele simpele, indrukwekkende trucs te leren. Sindsdien ben ik continu bezig met mijn freestyle
+                naar een hoger niveau te brengen en doe ik geregeld mee aan competities. Nu ben ik beschikbaar voor
+                privétrainingen, optredens, rollen in muziekclips, reclameclips, sponsoring, ... </p>
             </div>
             <div class="col-12 col-sm-6">
               <h4>Rewards</h4>
-              <p>- Winner Play like Pélé Belgium by Snickers, Meet and Greet with best soccer player of all time.</p>
-              <p>- Winner Belgium Online Lower Competition 2020</p>
-              <p>- Also top 16, top 8 and top 6 in various belgian Competitions</p>
+              <p>- Winnaar Play like Pélé Belgium by Snickers, Meet and Greet met beste voetballer aller tijden</p>
+              <p>- Winnaar Belgium Online Lower Competition 2020</p>
+              <p>- Daarnaast ook top 16, top 8 en top 6 in verschillende Belgische competities</p>
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-3"><img src="../Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
+        <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
             alt="Responsive image"></div>
       </div>
+    </div> -->
+    
+    <div class="row portfoliofreestyle">
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9" class="mystory">
+          <iframe src="https://www.youtube.com/embed/PxjYtmQ5OMk?si=10pIXkWEDC26WqV7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <h4 class="titlemystory">Freestyle Voetbal Showreel</h4>
+        <div class="omschrijving">Since more than 6 years, Tim Bonnarens practices freestyle and belongs to the best of Belgium.</div>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <h4 class="freestyletitle">Info about freestyle</h4>
+              <p class="omschrijving">I was passionated for juggling and skills with a ball since I was a child. In 2016, I started learning some simple, impressive tricks. Since then I have been continuously bringing my freestyle to a higher level and I regularly participate in competitions. Now I'm available for private training, performances, roles in music clips, advertising clips, sponsorships, ...</p>
+        <h4 class="freestyletitle">Rewards</h4>
+        <p class="omschrijving">- Winner Play like Pélé Belgium by Snickers, Meet and Greet with best soccer player of all time.</p>
+        <p class="omschrijving">- Winner Belgium Online Lower Competition 2020</p>
+        <p class="omschrijving">- Also top 16, top 8 and top 6 in various belgian Competitions</p>
+         <!--
+         <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
+           alt="Responsive image"></div>
+         </div>
+         -->
+         <p class="quote">Freestyle football is a unique combination where sport and art meet each other.</p>
+      </div>
+      <div class="col-12 col-md-6 portfoliodiv">
     </div>
   </main>
   <script src="../JS/appEnglish.js"></script>
