--- a/English/Audiovisuals/2D.html
+++ b/English/Audiovisuals/2D.html
@@ -85,20 +85,18 @@
 
   <main class="main">
     <div class="row portfolio">
-      <div class="col-12 col-md-6">
-        <video controls>
-          <source src="../../Video/Cupido.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/CPYEg2yilOI?si=JAOnR-dgkPNTeH-l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <p>Cupido</p>
         <div class="omschrijving">In this video I made a story about Cupido and produced it in After Effects.</div>
         <div class="credits">Music: Pixabay - Zakhar Valaha - Cinematic Melody</div>
       </div>
-      <div class="col-12 col-md-6">
-        <video controls>
-          <source src="../../Video/Stopmotion_WithSubtitles.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/6rPXg4GRQtM?si=F0vxd4fMK7isnuQJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <p>Fruit Salad</p>
         <div class="omschrijving">In this video I made a story about fruit.</div>
         <div class="credits">Sound Effects: Zapsplat & Freesound</div>
