--- a/English/Audiovisuals/video.html
+++ b/English/Audiovisuals/video.html
@@ -84,22 +84,21 @@
   </header>
   <main class="main">
     <div class="row portfolio">
-      <div class="col-12 col-md-6">
-        <video controls>
-          <source src="../../Video/TimBonnarens_ProductCommercial_02.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+          <!-- <source src="../../Video/TimBonnarens_ProductCommercial_02.mp4" type="video/mp4"> -->
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/Pa_dkJxhZq8?si=gaWCPbJDdkovw1Ep" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
         <p>Product Commercial</p>
         <div class="omschrijving">During my thesis at Artevelde University I specialised myself in product shots.</div>
         <div class="credits">Music: Commercial Uplifting Corporate - Ivymusic - Pixabay</div>
         <div class="credits">Background: Tommyvideo - Pixabay</div>
       </div>
 
-      <div class="col-12 col-md-6">
-        <video controls>
-          <source src="../../Video/KorteVersie_Voorstel2_MaandVDMarkt_Definitief.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/lg46XBk1f-Q?si=4WxcTGFCHfXDDCQT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <p>Month Of The Market</p>
         <div class="omschrijving">This video is made for the province of Antwerp to promote month of the market.</div>
         <div class="credits">Sound Recording: Leonie Van Herbruggen.</div>
@@ -108,11 +107,10 @@
         <div class="credits">Music: Happy Acoustic Guitar Background Music - Music Unlimited - Pixabay</div>
       </div>
 
-      <div class="col-12 col-md-6">
-        <video controls>
-          <source src="../../Video/MartijnDebbaut_WithSubtitles.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div class="col-12 col-md-6 portfoliodiv">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/830MdqBGJYs?si=dNrwOt8JZp7jZ-r5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <p>Reportage</p>
         <div class="omschrijving">This video shows a reportage of freestyle footballer <a
             href="https://www.instagram.com/martijn_debbaut/" target="_blank">Martijn Debbaut</a>.</div>
