--- a/English/index.html
+++ b/English/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="../CSS/general.css">
   <link rel="stylesheet" type="text/css" href="../CSS/home.css">
@@ -22,97 +23,94 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
-  <meta name="Tim Bonnarens" content="HTML, CSS">
+  <meta name="Tim Bonnarens" content="HTML, CSS"> 
   <title>Home</title>
 </head>
-
 <body>
   <header>
     <nav class="navbar navbar-expand-lg"> <a class="navbar-brand"><img src="../Fotos/Logo_TimBonnarens.png"
-          class="logo_tim" alt="LogoTim"></a>
-      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"> <a class="nav-link activepart" href="../English/index.html">Home<span
-                class="sr-only">(current)</span></a> </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Photography </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
-                href="../English/Photography/index.html">Main Page</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="../English/Photography/portrait.html">Portrait</a>
-              <a class="dropdown-item" href="../English/Photography/atmospheric.html">Atmospheric</a>
-              <a class="dropdown-item" href="../English/Photography/nature.html">Nature</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Graphic Designs </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
-                href="../English/Design/index.html">Main page</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="../English/Design/surrealism.html">Surrealism</a> <a class="dropdown-item"
-                href="Design/posters.html">Posters</a> <a class="dropdown-item" href="../English/Design/logos.html">Logos</a> <a
-                class="dropdown-item" href="../English/Design/infographics.html">Infographics</a> <a class="dropdown-item"
-                href="../English/Design/infographics.html">Campaigns</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Audiovisuals
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item" href="../English/Audiovisuals/index.html">Main Page</a>
+      class="logo_tim" alt="LogoTim"></a>
+  <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+    aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"> <a class="nav-link" href="../English/index.html">Home</a> </li>
+      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Photography </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
+            href="../English/Photography/index.html">Main Page</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="../English/Audiovisuals/video.html">Video</a>
-              <a class="dropdown-item" href="../English/Audiovisuals/2D.html">2D-animation</a>
-          <a class="dropdown-item" href="../English/Audiovisuals/3D.html">3D-animation</a>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" href="../English/freestyle.html">Freestyle</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="../English/aboutme.html">About Me</a> </li>
-          <!--<li class="nav-item"><a class="nav-link" href="../English/bonny.html">Bonny</a> </li>-->
-          <li class="nav-item"> <a class="nav-link" href="../English/contact.html">Contact</a> </li>
-        </ul>
-      </div>
-      <a class="language" href="../index.html"><div class="language">Dutch</div></a>
-    </nav>
-    
-  </header>
-  <main class="main">
-
-    <h4 class="topmarge animated fadeInLeft">Showreels</h4>
-    <div class="col showreelTim">
-      <div class="row portfolio">
-        <div class="col-12 col-md-6">
-          <div class="embed-responsive embed-responsive-16by9">
-            <iframe src="https://www.youtube.com/embed/ZlqjnuHTeo8?si=4bjyPP5pUQgFx0CO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <div class="embed-responsive embed-responsive-16by9">
-          <p>Video Showreel</p>
-          <!-- <div class="omschrijving">As an allround video designer, Tim Bonnarens provides video, audio and animation.</div> -->
-          <div class="credits">Song 1: Audio Library Plus - IVAAVI - Too Sweet</div>
-          <div class="credits">Song 2: Pixabay - Zakhar Valaha - Cinematic Melody</div>
-          <div class="credits">Sound Effects: freesound.org, zapsplat en zelf opgenomen</div>
+          <a class="dropdown-item" href="../English/Photography/portrait.html">Portrait</a>
+          <a class="dropdown-item" href="../English/Photography/atmospheric.html">Atmospheric</a>
+          <a class="dropdown-item" href="../English/Photography/nature.html">Nature</a>
         </div>
-        <div class="col-12 col-md-6">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://www.youtube.com/embed/lMbWDBBoz4I?si=flJiN0OmhRzckI-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-          <p>Photoshop Showreel</p>
-          <!-- <div class="omschrijving">As a graphic designer, Tim Bonnarens provides 2D-graphics, photography and image retouching.</div> -->
-          <div class="credits">Song: Pixabay - Alex Grohl - Far Away</div>
+      </li>
+      <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Graphic Designs </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
+            href="../English/Design/index.html">Main page</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="../English/Design/surrealism.html">Surrealism</a> <a class="dropdown-item"
+            href="Design/posters.html">Posters</a> <a class="dropdown-item" href="../English/Design/logos.html">Logos</a> <a
+            class="dropdown-item" href="../English/Design/infographics.html">Infographics</a> <a class="dropdown-item"
+            href="../English/Design/infographics.html">Campaigns</a>
         </div>
-      </div>
+      </li>
+      <li class="nav-item dropdown active">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Audiovisuals
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+          <a class="dropdown-item" href="../English/Audiovisuals/index.html">Main Page</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="../English/Audiovisuals/video.html">Video</a>
+          <a class="dropdown-item" href="../English/Audiovisuals/2D.html">2D-animation</a>
+      <a class="dropdown-item" href="../English/Audiovisuals/3D.html">3D-animation</a>
+        </div>
+      </li>
+      <li class="nav-item active"> <a class="nav-link activepart" href="../English/freestyle.html">Freestyle<span class="sr-only">(current)</span></a> </li>
+      <li class="nav-item"> <a class="nav-link" href="../English/aboutme.html">About Me</a> </li>
+      <!-- <li class="nav-item"><a class="nav-link" href="../../English/bonny.html">Bonny</a> </li> -->
+      <li class="nav-item"> <a class="nav-link" href="../English/contact.html">Contact</a> </li>
+    </ul>
   </div>
+      <a class="language" href="../freestyle.html"><div class="language">Dutch</div></a>
+    </nav>
+  </header>
+
+  <main class="main">
+    <h4 class="topmarge animated fadeInLeft">Showreels</h4>
+    <div class="col showreelsTim">
+    <div class="row portfolio">
+      <div class="col-12 col-md-6">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/ZlqjnuHTeo8?si=4bjyPP5pUQgFx0CO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <p>Video Showreel</p>
+        <!-- <div class="omschrijving">Als allround video designer verzorgt Tim Bonnarens video, audio en animatie.</div> -->
+        <div class="credits">Song 1: Audio Library Plus - IVAAVI - Too Sweet</div>
+        <div class="credits">Song 2: Pixabay - Zakhar Valaha - Cinematic Melody</div>
+        <div class="credits">Sound Effects: freesound.org, zapsplat and self recorded</div>
+      </div>
+      <div class="col-12 col-md-6">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/lMbWDBBoz4I?si=flJiN0OmhRzckI-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+        <p>Photoshop Showreel</p>
+        <!-- <div class="omschrijving">Als allround graphic designer verzorgt Tim Bonnarens 2D-graphics, fotografie en image retouching.</div> -->
+        <div class="credits">Song: Pixabay - Alex Grohl - Far Away</div>
+      </div>
+    </div>
+</div>
 
   <br><br>
-  
-  <div class="whatIdo"><h4 class="topmarge animated fadeInLeft">Portfolio</h4></div>
-  <article class="portfoliobox">
+
+    <div class="whatIdo"><h4 class="topmarge animated fadeInLeft whatIdo">Portfolio</h4></div>
+    <article class="portfoliobox">
     <div class="row rowportfoliobox">
       <div class="card col-12 col-sm-6 col-md-2 animated fadeInDown">
-        <a href="Photography/index.html">
+        <a href="Fotografie/index.html">
           <img class="card-img-top rounded-circle mystyle" src="../Fotos/fotografiehoofdfotocamera.jpg" alt="Card image cap"></a>
         <div class="card-block">
           <h5 class="card-title animated fadeInLeft">Photography</h5>
@@ -143,60 +141,58 @@
           <p class="card-text textblackbg">Shows, private trainings, birthday parties, commercials, ...</p>
         </div>
       </div>
-    </div>
-  </article>
+    </article>
 
-  <div class="row portfolio d-flex align-items-end">
-    <div class="card col-12" style="width: 18rem;">
-      <h5 class="producties col-12">Already collabed with</h5>
+    <div class="row portfolio d-flex align-items-end">
+      <div class="card col-12" style="width: 18rem;">
+        <h5 class="producties col-12">Already collabed with</h5>
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Artevelde.png" alt="Card image cap">
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Videofy.png" alt="Card image cap">
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/MEET-HET.jpg" alt="Card image cap">
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvA.png" alt="Card image cap">
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvWVL.png" alt="Card image cap">
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_OVL.png" alt="Card image cap">
+      </div>
+      <div class="card col-9 col-sm-4 col-lg-2" style="width: 18rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Limburg.png" alt="Card image cap">
+      </div>
+      <div class="card col-3 col-sm-2 col-lg-1" style="width: 9rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_VLB_v2.png" alt="Card image cap">
+      </div>
+      <div class="card col-8 col-sm-6 col-lg-2" style="width: 9rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_JerkBeefy.png" alt="Card image cap">
+      </div>
+      <div class="card col-4 col-sm-4 col-lg-1" style="width: 9rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Envelbag.png" alt="Card image cap">
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-2" style="width: 9rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Snickers.png" alt="Card image cap">
+      </div>
+      <div class="card col-6 col-sm-4 col-lg-1" style="width: 9rem;">
+        <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_DaknamseBossen.png" alt="Card image cap">
+      </div>
     </div>
-    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Artevelde.png" alt="Card image cap">
-    </div>
-    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Videofy.png" alt="Card image cap">
-    </div>
-    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/MEET-HET.jpg" alt="Card image cap">
-    </div>
-    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvA.png" alt="Card image cap">
-    </div>
-    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_ProvWVL.png" alt="Card image cap">
-    </div>
-    <div class="card col-6 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_OVL.png" alt="Card image cap">
-    </div>
-    <div class="card col-9 col-sm-4 col-lg-2" style="width: 18rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Limburg.png" alt="Card image cap">
-    </div>
-    <div class="card col-3 col-sm-2 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_VLB_v2.png" alt="Card image cap">
-    </div>
-    <div class="card col-8 col-sm-6 col-lg-2" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_JerkBeefy.png" alt="Card image cap">
-    </div>
-    <div class="card col-4 col-sm-4 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Envelbag.png" alt="Card image cap">
-    </div>
-    <div class="card col-6 col-sm-4 col-lg-2" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_Snickers.png" alt="Card image cap">
-    </div>
-    <div class="card col-6 col-sm-4 col-lg-1" style="width: 9rem;">
-      <img class="card-img-top fotouitgalerie rounded-0" src="../Fotos/Logo's/Logo_DaknamseBossen.png" alt="Card image cap">
-    </div>
-  </div>
   </main>
   <footer>
     <div class="row">
-      <div class="col-12 col-sm-4 footertext">On this site you can find my portfolio!
-      </div>
-      <div class="col-12 col-sm-4 footertext">Available for work as freelancer!</div>
-      <div class="col-12 col-sm-4 footertext">This website is made by Tim Bonnarens.</div>
+      <div class="col-12 col-sm-4 footertext">Op deze site vindt u onder andere mijn portfolio terug!</div>
+      <div class="col-12 col-sm-4 footertext">Beschikbaar voor opdrachten als freelancer!</div>
+      <div class="col-12 col-sm-4 footertext">Deze website is gemaakt door Tim Bonnarens.</div>
     </div>
   </footer>
-  <script src="../JS/homeEnglish.js"></script>
+  <script src="./JS/home.js"></script>
 </body>
 
 </html>
