--- a/English/index.html
+++ b/English/index.html
@@ -57,7 +57,7 @@
             href="../English/Design/infographics.html">Campaigns</a>
         </div>
       </li>
-      <li class="nav-item dropdown active">
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Audiovisuals
         </a>
