--- a/English/index.html
+++ b/English/index.html
@@ -75,7 +75,7 @@
       <li class="nav-item"> <a class="nav-link" href="../English/contact.html">Contact</a> </li>
     </ul>
   </div>
-      <a class="language" href="../freestyle.html"><div class="language">Dutch</div></a>
+      <a class="language" href="../index.html"><div class="language">Dutch</div></a>
     </nav>
   </header>
 
