--- a/English/index.html
+++ b/English/index.html
@@ -187,9 +187,9 @@
   </main>
   <footer>
     <div class="row">
-      <div class="col-12 col-sm-4 footertext">Op deze site vindt u onder andere mijn portfolio terug!</div>
-      <div class="col-12 col-sm-4 footertext">Beschikbaar voor opdrachten als freelancer!</div>
-      <div class="col-12 col-sm-4 footertext">Deze website is gemaakt door Tim Bonnarens.</div>
+      <div class="col-12 col-sm-4 footertext">On this site, you can find my portfolio!</div>
+      <div class="col-12 col-sm-4 footertext">Available voor assignments as a freelancer!</div>
+      <div class="col-12 col-sm-4 footertext">This website is made by Tim Bonnarens.</div>
     </div>
   </footer>
   <script src="./JS/home.js"></script>
