--- a/freestyle.html
+++ b/freestyle.html
@@ -134,6 +134,8 @@
         <p class="omschrijving">- Winnaar Play like Pélé Belgium by Snickers, Meet and Greet met beste voetballer aller tijden</p>
         <p class="omschrijving">- Winnaar Belgium Online Lower Competition 2020</p>
         <p class="omschrijving">- Daarnaast ook top 16, top 8 en top 6 in verschillende Belgische competities</p>
+        <h4 class="freestyletitle">Mogelijkheden</h4>
+        <p class="omschrijving">Naast Designen kan ik dus ook goed overweg met de bal, en sta ik ook actief als freelance freestyle voetballer. Naast design bedrijf, staat Tim Bonnarens eveneens geregistreerd onder "Beoefening van uitvoerende kunsten door zelfstandig werkende artiesten".</p>
          <!--
          <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
            alt="Responsive image"></div>
