--- a/English/freestyle.html
+++ b/English/freestyle.html
@@ -130,6 +130,8 @@
         <p class="omschrijving">- Winner Play like Pélé Belgium by Snickers, Meet and Greet with best soccer player of all time.</p>
         <p class="omschrijving">- Winner Belgium Online Lower Competition 2020</p>
         <p class="omschrijving">- Also top 16, top 8 and top 6 in various belgian Competitions</p>
+        <h4 class="freestyletitle">Mogelijkheden</h4>
+        <p class="omschrijving">Apart from Design, I can handle the ball as well, and I'm also active as a freelance freestyle footballer. Apart from Design Company, Tim Bonnarens is also registrated under "Practice of performing arts by independently working artists".</p>
          <!--
          <div class="col-12 col-md-3"><img src="Fotos/BonnarensTim_Freestyle.jpg" class="img-fluid"
            alt="Responsive image"></div>
