--- a/contact.html
+++ b/contact.html
@@ -125,6 +125,7 @@
       <div class="col-12 col-sm-6 col-lg-2">
         <h5 class="topmarge animated fadeInLeft">Sociale Media</h5>
         <ul class="list-unstyled animated fadeInUp">
+          <li class="contactlink"><a href="https://www.linkedin.com/in/tim-bonnarens/" class="fa fa-linkedin" target="_blank"><span>LinkedIn</span></a></li>
           <li class="contactlink"><a href="https://www.instagram.com/timbonnarens/" class="fa fa-instagram" target="_blank"><span>Content Creating</span></a></li>
           <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_fs/" class="fa fa-instagram" target="_blank"><span>Freestyle Voetbal</span></a></li>
           <li class="contactlink"><a href="https://www.youtube.com/channel/UCLMCLhOov9ziUTiJyDk_wzQ" class="fa fa-youtube" target="_blank"><span>Content Creating</span></a></li>
