--- a/English/contact.html
+++ b/English/contact.html
@@ -68,6 +68,7 @@
               <a class="dropdown-item" href="../English/Audiovisuals/3D.html">3D-animation</a>
             </div>
           </li>
+          <li class="contactlink"><a href="https://www.linkedin.com/in/tim-bonnarens/" class="fa fa-linkedin" target="_blank"><span>LinkedIn</span></a></li>
           <li class="nav-item"> <a class="nav-link" href="../English/freestyle.html">Freestyle</a> </li>
           <li class="nav-item"> <a class="nav-link" href="../English/aboutme.html">About Me</a> </li>
           <!-- <li class="nav-item"><a class="nav-link" href="../English/bonny.html">Bonny</a> </li> -->
