--- a/English/contact.html
+++ b/English/contact.html
@@ -130,8 +130,8 @@
       <div class="col-12 col-sm-6 col-lg-2">
         <h5 class="topmarge animated fadeInLeft">Social Media</h5>
         <ul class="list-unstyled animated fadeInUp">
-          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens/" class="fa fa-instagram" target="_blank"><span>Content Creating</span></a></li>
-          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_fs/" class="fa fa-instagram" target="_blank"><span>Freestyle Football</span></a></li>
+          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_design/" class="fa fa-instagram" target="_blank"><span>Content Creating</span></a></li>
+          <li class="contactlink"><a href="https://www.instagram.com/timbonnarens_freestyle/" class="fa fa-instagram" target="_blank"><span>Freestyle Football</span></a></li>
           <li class="contactlink"><a href="https://www.youtube.com/channel/UCLMCLhOov9ziUTiJyDk_wzQ" class="fa fa-youtube" target="_blank"><span>Content Creating</span></a></li>
           <li class="contactlink"><a href="https://www.youtube.com/channel/UCSCQnlefxNHWhy9ShLzt7Ow" class="fa fa-youtube" target="_blank"><span>Freestyle Football</span></a></li>
         </ul>
