--- a/overmij.html
+++ b/overmij.html
@@ -79,7 +79,6 @@
           <a class="dropdown-item" href="/Audiovisuals/3D.html">3D-animatie</a>
             </div>
           </li>
-          <li class="nav-item"> <a class="nav-link" href="freestyle.html">Freestyle</a> </li>
           <li class="nav-item active">
             <a class="nav-link activepart" href="overmij.html">Over Mij<span class="sr-only">(current)</span></a>
           </li>
@@ -101,11 +100,9 @@
       </div>
       <div class="col-12 col-sm-9 col-md-4 topmarge">
         <h4 class="animated fadeInLeft">Info over mij</h4>
-        <p class="animated fadeInUp">Hey! Ik ben Tim, een audiovisual, graphic en photo designer, fotograaf, image retoucher en
-          freestyle voetballer uit
-          Lokeren. Ik hou van ontwerpen en vind gemakkelijk mijn weg in technische programma's als DaVinci, Première, After Effects, Illustrator,
-          Photoshop en InDesign en kan hier ook creatief mee omspringen. Ook met de camera kan ik overweg en ook in het
-          freestyle voetbal ben ik creatief, waarbij ik trucs uitvoer die maar enkelen kunnen nadoen.</p>
+        <p class="animated fadeInUp">Hey! Ik ben Tim, een audiovisual, graphic en photo designer, fotograaf en image retoucher uit
+          Lokeren. Momenteel ben ik me steeds meer aan het verdiepen in video. Ik hou ook van ontwerpen en vind gemakkelijk mijn weg in technische programma's als DaVinci, Premiere, After Effects, Illustrator,
+          Photoshop en InDesign en kan hier ook creatief mee omspringen. Ook met de camera kan ik overweg.</p>
         <p class="animated fadeInUp">Ik ben beschikbaar als foto- en/of videograaf op locatie waarbij ik beelden van onvergetelijke
           gebeurtenissen vastleg. Ik
           werk met de DSLR-camera Nikon D3400 en objectieven Nikon AF-P 18-55mm F/3.5-5.6G VR (kitlens), Nikon AF-S 50mm
