--- a/English/Audiovisuals/index.html
+++ b/English/Audiovisuals/index.html
@@ -26,6 +26,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="../../English/index.html">Home</a></li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle activepart" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Audiovisuals
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item activepart" href="../../English/Audiovisuals/index.html">Main Page<span class="sr-only">(current)</span></a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="../../English/Audiovisuals/video.html">Video</a>
+          <a class="dropdown-item" href="../../English/Audiovisuals/2D.html">2D-animation</a>
+          <a class="dropdown-item" href="../../English/Audiovisuals/3D.html">3D-animation</a>
+            </div>
+          </li>
           <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Photography </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
@@ -47,19 +59,6 @@
                 href="../../English/Design/campaigns.html">Campaigns</a>
             </div>
           </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle activepart" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Audiovisuals
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item activepart" href="../../English/Audiovisuals/index.html">Main Page<span class="sr-only">(current)</span></a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="../../English/Audiovisuals/video.html">Video</a>
-          <a class="dropdown-item" href="../../English/Audiovisuals/2D.html">2D-animation</a>
-          <a class="dropdown-item" href="../../English/Audiovisuals/3D.html">3D-animation</a>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" href="../../English/freestyle.html">Freestyle</a> </li>
           <li class="nav-item"> <a class="nav-link" href="../../English/aboutme.html">About Me</a> </li>
           <!-- <li class="nav-item"><a class="nav-link" href="../../English/bonny.html">Bonny</a> </li> -->
           <li class="nav-item"> <a class="nav-link" href="../../English/contact.html">Contact</a> </li>
@@ -72,7 +71,7 @@
   <h4 class="topmarge animated fadeInLeft">Audiovisuals</h4>
   <div class="row">
     <div class="card col-6 col-sm-4 col-md-2 animated fadeInDown">
-      <a href="../Audiovisuals/Video.html">
+      <a href="../Audiovisuals/video.html">
       <div class="color-overlay"><img class="card-img-top rounded-circle mystyle" src="../../Fotos/Audiovisuals/nacht.jpg"
         alt="Card image cap" class="fotouitgalerie"></div></a>
       <div class="card-block text-center">
