--- a/English/aboutme.html
+++ b/English/aboutme.html
@@ -33,6 +33,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"> <a class="nav-link" href="../English/index.html">Home</a> </li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Audiovisuals
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item" href="../English/Audiovisuals/index.html">Main Page</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="../English/Audiovisuals/video.html">Video</a>
+              <a class="dropdown-item" href="../English/Audiovisuals/2D.html">2D-animation</a>
+              <a class="dropdown-item" href="../English/Audiovisuals/3D.html">3D-animation</a>
+            </div>
+          </li>
           <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Photography </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown1"> <a class="dropdown-item"
@@ -55,20 +68,6 @@
                 href="../English/Design/infographics.html">Campaigns</a>
             </div>
           </li>
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Audiovisuals
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item" href="../English/Audiovisuals/index.html">Main Page</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="../English/Audiovisuals/video.html">Video</a>
-              <a class="dropdown-item" href="../English/Audiovisuals/2D.html">2D-animation</a>
-              <a class="dropdown-item" href="../English/Audiovisuals/3D.html">3D-animation</a>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" href="../English/freestyle.html">Freestyle</a> </li>
           <li class="nav-item active"> <a class="nav-link activepart" href="../English/aboutme.html">About Me<span
                 class="sr-only">(current)</span></a> </li>
           <!-- <li class="nav-item"><a class="nav-link" href="../../English/bonny.html">Bonny</a> </li> -->
@@ -87,13 +86,11 @@
       </div>
       <div class="col-12 col-sm-9 col-md-4 topmarge">
         <h4 class="animated fadeInLeft">Info about me</h4>
-        <p class="animated fadeInUp">Hi! I am Tim, an audiovisual, graphic and photo designer, photographer, image
-          retoucher and
-          freestyle footballer from
+        <p class="animated fadeInUp">Hi! I am Tim, an audiovisual, graphic and photo designer, photographer and image
+          retoucher from
           Lokeren. I love creating and find my way easily in technical software as Première Pro, After Effects,
           Illustrator, Photoshop, InDesign and can use it in a creative way.
-          I can also work with cameras. In freestyle football I'm creative, wherein I can perform tricks that only some
-          can repeat.</p>
+          I can also work with cameras.</p>
         <p class="animated fadeInUp">I am available as photo- and/or videographer on location. Here, I shoot footage of
           unforgettable memories. I
           work with the DSLR-camera Nikon D3400 and objectives Nikon AF-P 18-55mm F/3.5-5.6G VR (wide angle/kit), Nikon AF-S
